# open-rag-engine

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  test.py
docker/: Dockerfile  entrypoint.sh
docker/app/: Dockerfile
docker/ollama/: entrypoint.sh
src/api/: enums.py  main.py  models.py
src/common/: logs.py
src/db/: base.py  chroma.py  db.py  query_example.py
src/ingestion/: base.py  main.py  pdf_processor.py
src/tests/: conftest.py  test_fileinfo.py
src/video_transcription/: transcript.py  video_to_audio.py
src/video_transcription/transcribed_text/: output.txt
