[tool.poetry]
name = "pfdtrainer"
version = "0.1.0"
description = "learning rag"
authors = ["etsant.18@gmail.com"]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pillow = "^11.3.0"
tiktoken = "^0.11.0"
lxml = "^6.0.2"
langchain = "^0.3.27"
langchain-community = "^0.3.30"
langchain-openai = "^0.3.35"
langchain-groq = "^0.3.8"
python-dotenv = "^1.1.1"
ollama = "^0.6.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

